[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture2D" id=1]
[ext_resource path="res://Scenes/UIControl/BotonCustom.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UIControl/Control.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.941176, 0, 0, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="UIControl" type="Control" groups=[
"botones",
]]
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2( 400, 200 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
offset_right = 942.0
offset_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="Panel/CenterContainer"]
offset_left = 471.0
offset_top = 300.0
offset_right = 471.0
offset_bottom = 300.0

[node name="Background" type="Sprite2D" parent="Panel/CenterContainer/Background"]
scale = Vector2( 7.45558, 4.60632 )
texture = ExtResource( 1 )

[node name="ContenedorH" type="HBoxContainer" parent="Panel/CenterContainer"]
offset_right = 942.0
offset_bottom = 600.0
theme_override_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Botones" type="VBoxContainer" parent="Panel/CenterContainer/ContenedorH"]
offset_right = 400.0
offset_bottom = 600.0
custom_minimum_size = Vector2( 400, 600 )
theme_override_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="Panel/CenterContainer/ContenedorH/Botones" instance=ExtResource( 3 )]

[node name="Button2" parent="Panel/CenterContainer/ContenedorH/Botones" instance=ExtResource( 3 )]
offset_top = 140.0
offset_bottom = 240.0

[node name="Button3" parent="Panel/CenterContainer/ContenedorH/Botones" instance=ExtResource( 3 )]
offset_top = 280.0
offset_bottom = 380.0

[node name="TextureButton" type="TextureButton" parent="Panel/CenterContainer/ContenedorH/Botones"]
offset_left = 136.0
offset_top = 420.0
offset_right = 264.0
offset_bottom = 548.0
size_flags_horizontal = 4
texture_normal = ExtResource( 1 )

[node name="CosasHorizontales" type="HBoxContainer" parent="Panel/CenterContainer/ContenedorH"]
offset_left = 440.0
offset_top = 550.0
offset_right = 652.0
offset_bottom = 600.0
size_flags_vertical = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/CosasHorizontales"]
offset_right = 50.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect2" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/CosasHorizontales"]
offset_left = 54.0
offset_right = 104.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect3" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/CosasHorizontales"]
offset_left = 108.0
offset_right = 158.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect4" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/CosasHorizontales"]
offset_left = 162.0
offset_right = 212.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 50, 50 )

[node name="Grilla" type="GridContainer" parent="Panel/CenterContainer/ContenedorH"]
offset_left = 692.0
offset_top = 27.0
offset_right = 942.0
offset_bottom = 572.0
size_flags_vertical = 4
theme_override_constants/v_separation = 5
theme_override_constants/h_separation = 50
columns = 3

[node name="ColorRect5" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_right = 50.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect6" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 100.0
offset_right = 150.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect7" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 200.0
offset_right = 250.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect8" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_top = 55.0
offset_right = 50.0
offset_bottom = 105.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect9" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 100.0
offset_top = 55.0
offset_right = 150.0
offset_bottom = 105.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect10" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 200.0
offset_top = 55.0
offset_right = 250.0
offset_bottom = 105.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect11" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_top = 110.0
offset_right = 50.0
offset_bottom = 160.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect12" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 100.0
offset_top = 110.0
offset_right = 150.0
offset_bottom = 160.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect13" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 200.0
offset_top = 110.0
offset_right = 250.0
offset_bottom = 160.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect14" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_top = 165.0
offset_right = 50.0
offset_bottom = 215.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect15" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 100.0
offset_top = 165.0
offset_right = 150.0
offset_bottom = 215.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect16" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 200.0
offset_top = 165.0
offset_right = 250.0
offset_bottom = 215.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect17" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_top = 220.0
offset_right = 50.0
offset_bottom = 270.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect18" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 100.0
offset_top = 220.0
offset_right = 150.0
offset_bottom = 270.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect19" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 200.0
offset_top = 220.0
offset_right = 250.0
offset_bottom = 270.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect20" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_top = 275.0
offset_right = 50.0
offset_bottom = 325.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect21" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 100.0
offset_top = 275.0
offset_right = 150.0
offset_bottom = 325.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect22" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 200.0
offset_top = 275.0
offset_right = 250.0
offset_bottom = 325.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect23" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_top = 330.0
offset_right = 50.0
offset_bottom = 380.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect24" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 100.0
offset_top = 330.0
offset_right = 150.0
offset_bottom = 380.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect25" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 200.0
offset_top = 330.0
offset_right = 250.0
offset_bottom = 380.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect26" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_top = 385.0
offset_right = 50.0
offset_bottom = 435.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect27" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 100.0
offset_top = 385.0
offset_right = 150.0
offset_bottom = 435.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect28" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 200.0
offset_top = 385.0
offset_right = 250.0
offset_bottom = 435.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect29" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_top = 440.0
offset_right = 50.0
offset_bottom = 490.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect30" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 100.0
offset_top = 440.0
offset_right = 150.0
offset_bottom = 490.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect31" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 200.0
offset_top = 440.0
offset_right = 250.0
offset_bottom = 490.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect32" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_top = 495.0
offset_right = 50.0
offset_bottom = 545.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect33" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 100.0
offset_top = 495.0
offset_right = 150.0
offset_bottom = 545.0
custom_minimum_size = Vector2( 50, 50 )

[node name="ColorRect34" type="ColorRect" parent="Panel/CenterContainer/ContenedorH/Grilla"]
offset_left = 200.0
offset_top = 495.0
offset_right = 250.0
offset_bottom = 545.0
custom_minimum_size = Vector2( 50, 50 )

[node name="Icono" type="Control" parent="Panel/CenterContainer"]
offset_left = 471.0
offset_top = 300.0
offset_right = 471.0
offset_bottom = 300.0

[node name="Sprite2D" type="Sprite2D" parent="Panel/CenterContainer/Icono"]
texture = ExtResource( 1 )

[node name="PowerUps" type="HBoxContainer" parent="Panel/CenterContainer"]
offset_left = 471.0
offset_top = 300.0
offset_right = 471.0
offset_bottom = 300.0
[connection signal="button_down" from="Panel/CenterContainer/ContenedorH/Botones/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Panel/CenterContainer/ContenedorH/Botones/Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="Panel/CenterContainer/ContenedorH/Botones/Button3" to="." method="_on_Button3_button_down"]
